<resources>
    <string name="app_name">MOB Introdução Android Aula3 App1</string>
    <string name="action_settings">Settings</string>
    <string name="txtComp">Computador</string>
    <string name="txtJogador">Jogador</string>
    <string name="txtJogarJogador">Jogar Jogador</string>
    <string name="JogarComp">Jogar Computador</string>
    <string name="txtReiniciar">Reiniciar Partida</string>
</resources>
